--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,5 @@
 $black: #020300;
 $white: #f0f0f0;
-$primary: #cfdbd1;
-$secondary: #90a8a4;
+$primary: #90A8A4;
+$secondary: #97B8B1;
+$tertiary: #C7E6E1;
