--- a/src/styles/_fonts.scss
+++ b/src/styles/_fonts.scss
@@ -1,63 +1,15 @@
 @font-face {
-    font-display: swap;
-    font-family: Juana;
-    font-style: normal;
-    font-weight: 100;
-    src: url('/fonts/Juana-Thin.ttf');
-  }
-  
-  @font-face {
-    font-display: swap;
-    font-family: Juana;
-    font-style: normal;
-    font-weight: 200;
-    src: url('/fonts/Juana-ExtraLight.ttf');
-  }
-  
-  @font-face {
-    font-display: swap;
-    font-family: Juana;
-    font-style: normal;
-    font-weight: 300;
-    src: url('/fonts/Juana-Light.ttf');
-  }
-  
-  @font-face {
-    font-display: swap;
-    font-family: Juana;
-    font-style: normal;
-    font-weight: 400;
-    src: url('/fonts/Juana-Regular.ttf');
-  }
-  
-  @font-face {
-    font-display: swap;
-    font-family: Juana;
-    font-style: normal;
-    font-weight: 500;
-    src: url('/fonts/Juana-Medium.ttf');
-  }
-  
-  @font-face {
-    font-display: swap;
-    font-family: Juana;
-    font-style: normal;
-    font-weight: 700;
-    src: url('/fonts/Juana-Bold.ttf');
-  }
-  
-  @font-face {
-    font-display: swap;
-    font-family: Juana;
-    font-style: normal;
-    font-weight: 800;
-    src: url('/fonts/Juana-ExtraBold.ttf');
-  }
-  
-  @font-face {
-    font-display: swap;
-    font-family: Juana;
-    font-style: normal;
-    font-weight: 900;
-    src: url('/fonts/Juana-Black.ttf');
-  }
+  font-display: swap;
+  font-family: "FS Gravity";
+  font-style: normal;
+  font-weight: lighter;
+  src: url('/fonts/fs-gravity.ttf');
+}
+
+@font-face {
+  font-display: swap;
+  font-family: "TT Octosquares Compressed";
+  font-style: normal;
+  font-weight: 200;
+  src: url('/fonts/tt-octosquares_compressed.ttf');
+}
