--- a/src/index.scss
+++ b/src/index.scss
@@ -159,9 +159,10 @@ body {
       width: 80%;
       left: 10%;
       // right: 0;
-      top: 157rem;
+      // top: 157rem;
       z-index: 2;
       margin-bottom: 1rem;
+      margin-top: 3rem;
     }
   }
 }
